--- a/unicorn_website-master/css/responsive.css
+++ b/unicorn_website-master/css/responsive.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -11,19 +11,53 @@
     .headingcontent {
         display: none;
     }
-    .formcontent{
+
+    .formcontent {
         width: 100%;
         padding: 50px 0 50px 0;
-       
+
     }
 
     /* about us section */
-    .rectangleright{
+    .rectangleright {
         display: none;
     }
 
-    .rectangleright .uspheading{
+    .rectangleright .uspheading {
         font-size: 20px;
     }
 
+}
+
+
+
+/* about us page  responsive*/
+
+@media (max-width:768px) {
+    .aboutus{
+        padding: 33px;
+    }
+    .aboutusimg {
+        width: 100%;
+        max-width: 100%;
+        height: 100%;
+        object-fit: cover;
+        margin-top: 50px;
+    }
+    /* .aboutus p{
+        width: auto;
+    } */
+    
+
+    /* founder section */
+    
+
+        .teamsectionn .cardwrapperr {
+            box-shadow: 0 .25rem 1.75rem rgba(30, 34, 40, .07)!important;
+            border-radius: 8px;
+            text-align: center;
+            margin: 10px;
+        }
+
+    
 }
