--- a/unicorn_website-master/css/responsive.css
+++ b/unicorn_website-master/css/responsive.css
@@ -58,6 +58,10 @@
             text-align: center;
             margin: 10px;
         }
+        /* contact section */
+        .map_content{
+            margin-top: 25px;
+        }
 
     
 }
