--- a/unicorn_website-master/style/style.css
+++ b/unicorn_website-master/style/style.css
@@ -101,16 +101,50 @@
 
         }
 
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-menu {
+            display: none;
+            position: absolute;
+            background-color: #f1f1f1;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown-menu .dropdown-item {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown-menu a:hover {
+            background-color: #ddd;
+        }
+
+        .dropdown:hover .dropdown-menu {
+            display: block;
+        }
+
+        /* .dropdown:hover .dropbtn {
+            background-color: #3e8e41;
+        } */
+
         @media (min-width: 992px) {
 
             .navbar-expand-lg .navbar-nav .dropdown-menu {
                 /* border:1px solid red; */
-               background-color: black;
-               width:400px;
-               /* color: white; */
+                background-color: black;
+                width: 400px;
+                /* color: white; */
 
             }
         }
+
         /* .navbar-expand-lg .navbar-nav .dropdown:hover{
             background-color: black;
             width:400px;
@@ -120,7 +154,7 @@
             padding: 12px;
             margin: 4px;
             background-color: #feca0a;
-            color: white; 
+            color: white;
             font-weight: 500px;
 
         }
