--- a/unicorn_website-master/style/style.css
+++ b/unicorn_website-master/style/style.css
@@ -53,7 +53,7 @@
         }
 
         .navbar-brand {
-            width: 30%;
+            width: 24%;
             /* border: 1px solid red; */
             text-align: center;
 
@@ -74,13 +74,13 @@
             width: 70%;
             padding: 20px;
             text-align: left;
-            margin: auto;
+            margin-left: 20px;
         }
 
         .navbar-collapse .dropdown-menu ul li a {
             margin-right: 15px;
             font-size: 20px;
-            color: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
 
         }
 
@@ -93,7 +93,7 @@
 
 
         .navbar-collapse ul li a {
-            color: white !important;
+            color: white;
         }
 
         .navbar-collapse .nav-link {
@@ -109,7 +109,7 @@
         .dropdown-menu {
             display: none;
             position: absolute;
-            background-color: #f1f1f1;
+            /* background-color: #f1f1f1; */
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             z-index: 1;
@@ -122,8 +122,18 @@
             display: block;
         }
 
+        .navbar-light .navbar-nav .nav-link {
+            color: rgb(255 245 245);
+            font-weight: bold;
+        }
+
+        .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .show>.nav-link {
+            color: #feb902
+        }
+
         .dropdown-menu a:hover {
             background-color: #ddd;
+            color: yellow;
         }
 
         .dropdown:hover .dropdown-menu {
@@ -138,17 +148,24 @@
 
             .navbar-expand-lg .navbar-nav .dropdown-menu {
                 /* border:1px solid red; */
-                background-color: black;
+                background-color: rgb(245, 241, 241);
                 width: 400px;
                 /* color: white; */
 
             }
         }
 
+
         /* .navbar-expand-lg .navbar-nav .dropdown:hover{
             background-color: black;
             width:400px;
         } */
+
+        .navbar-collapse form {
+            /* border: 1px solid red; */
+            margin-right: 50px;
+            margin-bottom: 15px;
+        }
 
         .navbar-collapse form .btn {
             padding: 12px;
@@ -156,7 +173,14 @@
             background-color: #feca0a;
             color: white;
             font-weight: 500px;
+            border-radius: 5px;
+            font-family: Montserrat;
 
+        }
+
+        .navbar-collapse form {
+            /* border: 1px solid red; */
+            margin-right: 50px;
         }
 
 
@@ -170,7 +194,7 @@
             padding-right: 20px;
         } */
 
-        button {
+        /* button {
             border: none;
             background-color: transparent;
         }
@@ -192,7 +216,7 @@
             color: #000;
             text-decoration: none;
         }
-
+ */
         /* .main_banner {
             margin-top: -102px;
             z-index: -1;
@@ -902,7 +926,7 @@
             background: linear-gradient(to right, rgba(0, 0, 0, 0.397), #ffffff0e), url("../style/image/main_banner_1.jpg");
             background-position: center;
             background-size: cover;
-            margin-top: 60px;
+            margin-top: 0px;
         }
 
         #video .carousel-control-prev {
