--- a/unicorn_website-master/style/style.css
+++ b/unicorn_website-master/style/style.css
@@ -7,6 +7,8 @@
             padding: 0px;
         }
 
+        
+
         p {
             font-family: Montserrat;
             font-size: 16px;
@@ -80,7 +82,7 @@
         .navbar-collapse .dropdown-menu ul li a {
             margin-right: 15px;
             font-size: 20px;
-            color: rgb(255, 255, 255);
+            color:black;
 
         }
 
@@ -111,7 +113,7 @@
             display: none;
             position: absolute;
             /* background-color: #f1f1f1; */
-            min-width: 160px;
+            min-width: 0px;
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             z-index: 1;
         }
@@ -139,12 +141,71 @@
         }
 
         .dropdown-menu a:hover {
-            background-color: #ddd;
-            color: #feca0a;
+            /* background-color: #feca0a; */
+            color: BLACK;
+            width:100%;
+        }
+        .dropdown-menu .dropdown-item:hover{
+            background-color: #feca0a; 
+            color: BLACK;
+            width:100%;
         }
 
-        .dropdown:hover .dropdown-menu {
+        .dropdown:hover >.dropdown-menu {
             display: block;
+        }
+
+        .dropdown-submenu {
+            position: relative;
+        }
+        .dropdown-submenu  .dropdown-menu .dropdown-item a:hover{
+            /* background-color: #feca0a; */
+            color: BLACK;
+            width:100%;
+        }
+        
+        .dropdown-submenu>.dropdown-menu {
+            top: 0;
+            left: 100%;
+            margin-top: -6px;
+            margin-left: -1px;
+            -webkit-border-radius: 0 6px 6px 6px;
+            -moz-border-radius: 0 6px 6px;
+            border-radius: 0 6px 6px 6px;
+        }
+        
+        .dropdown-submenu:hover>.dropdown-menu {
+            display: block;
+        }
+        
+        .dropdown-submenu>a:after {
+            display: block;
+            content: " ";
+            float: right;
+            width: 0;
+            height: 0;
+            border-color: transparent;
+            border-style: solid;
+            border-width: 5px 0 5px 5px;
+            border-left-color: #ccc;
+            margin-top: 12px;
+            margin-right: -2px;
+        }
+        
+        .dropdown-submenu:hover>a:after {
+            border-left-color: #fff;
+        }
+        
+        .dropdown-submenu.pull-left {
+            float: none;
+        }
+        
+        .dropdown-submenu.pull-left>.dropdown-menu {
+            left: -100%;
+            margin-left: 10px;
+            -webkit-border-radius: 6px 0 6px 6px;
+            -moz-border-radius: 6px 0 6px 6px;
+            border-radius: 6px 0 6px 6px;
         }
 
         /* .dropdown:hover .dropbtn {
@@ -154,10 +215,10 @@
         @media (min-width: 992px) {
 
             .navbar-expand-lg .navbar-nav .dropdown-menu {
-                /* border:1px solid red; */
+           
                 background-color: rgb(245, 241, 241);
-                width: 400px;
-                /* color: white; */
+                width: 400PX;
+   
 
             }
         }
